fixs z-index

--- a/src/stylus/blocks/callback.styl
+++ b/src/stylus/blocks/callback.styl
@@ -9,7 +9,7 @@
   justify-content: center
   align-items: center
   background-color #0F0F17
-  z-index: 20
+  z-index: 1000
   transition: .5s
   &__title
     color: #ffffff;
